--- a/BBDBank/Views/Home/Index.cshtml
+++ b/BBDBank/Views/Home/Index.cshtml
@@ -4,16 +4,16 @@
 
 <body class="theme-blue">
 	
-<div id="fb-root"></div>
-<script>
-(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.10&appId=1856939364595080";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));
-</script>
+    <div id="fb-root"></div>
+    <script>
+        (function (d, s, id) {
+                    var js, fjs = d.getElementsByTagName(s)[0];
+                    if (d.getElementById(id)) return;
+                    js = d.createElement(s); js.id = id;
+                    js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.10&appId=1856939364595080";
+                    fjs.parentNode.insertBefore(js, fjs);
+                }(document, 'script', 'facebook-jssdk'));
+    </script>
 
     <!-- Page Loader -->
     <div class="page-loader-wrapper">
@@ -52,7 +52,7 @@
             <div class="navbar-header">
                 <a href="javascript:void(0);" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false"></a>
                 <a href="javascript:void(0);" class="bars"></a>
-                <a class="navbar-brand" href="index.html">BBD Rewards</a>
+                <a class="navbar-brand" href="/Home">BBD Rewards</a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -105,7 +105,7 @@
                 </div>
                 <div class="info-container">
                     <div class="name" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cebo M</div>
-                    <div class="email">cebo@bbd.co.za</div>
+                    <div class="name">Coins <span class="label bg-blue">9001</span></div>
                     <div class="btn-group user-helper-dropdown">
                         <i class="material-icons" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">keyboard_arrow_down</i>
                         <ul class="dropdown-menu pull-right">
@@ -122,19 +122,19 @@
                 <ul class="list">
                     <li class="header">MAIN NAVIGATION</li>
                     <li class="active">
-                        <a href="index.html">
+                        <a href="/Home">
                             <i class="material-icons">home</i>
                             <span>Home</span>
                         </a>
                     </li>
                     <li>
-                        <a href="pages/typography.html">
+                        <a href="#">
                             <i class="material-icons">settings</i>
                             <span>Admin</span>
                         </a>
                     </li>
                     <li>
-                        <a href="pages/helper-classes.html">
+                        <a href="#">
                             <i class="material-icons">shopping_cart</i>
                             <span>BBD Store</span>
                         </a>
@@ -146,12 +146,12 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/CreateChallenge" class="">
                                     <span>Add Challenge</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/ChallengeList" class="">
                                     <span>Complete Challenge</span>
                                 </a>
                             </li>
@@ -164,12 +164,12 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/CreateChallenge" class="">
                                     <span>Add Challenge</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/ChallengeList" class="">
                                     <span>Complete Challenge</span>
                                 </a>
                             </li>
@@ -182,12 +182,12 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/CreateChallenge" class="">
                                     <span>Add Challenge</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/ChallengeList" class="">
                                     <span>Complete Challenge</span>
                                 </a>
                             </li>
@@ -200,12 +200,12 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/CreateChallenge" class="">
                                     <span>Add Challenge</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/ChallengeList" class="">
                                     <span>Complete Challenge</span>
                                 </a>
                             </li>
@@ -218,12 +218,12 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/CreateChallenge" class="">
                                     <span>Add Challenge</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/ChallengeList" class="">
                                     <span>Complete Challenge</span>
                                 </a>
                             </li>
@@ -236,12 +236,12 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/CreateChallenge" class="">
                                     <span>Add Challenge</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/ChallengeList" class="">
                                     <span>Complete Challenge</span>
                                 </a>
                             </li>
@@ -254,12 +254,12 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/CreateChallenge" class="">
                                     <span>Add Challenge</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/ChallengeList" class="">
                                     <span>Complete Challenge</span>
                                 </a>
                             </li>
@@ -272,12 +272,12 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/CreateChallenge" class="">
                                     <span>Add Challenge</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/ChallengeList" class="">
                                     <span>Complete Challenge</span>
                                 </a>
                             </li>
@@ -292,7 +292,7 @@
                     &copy; 2017 <a href="javascript:void(0);">BBDBank</a>.
                 </div>
                 <div class="version">
-                    <b>Version: </b> 1.0.0
+                    <b>Version: </b> 0.0.2
                 </div>
             </div>
             <!-- #Footer -->
@@ -485,33 +485,109 @@
                 </div>
                 <!-- #END# Answered Tickets -->
                 
-                <div class="row clearfix">
-                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                        <div class="card">
-                            <div class="header bg-light-blue">
-                                <h2>
-                                    BBD Feed <small>Facebook</small>
-                                </h2>
-                                <ul class="header-dropdown m-r--5">
-                                    <li>
-                                        <a href="javascript:void(0);" data-toggle="cardloading" data-loading-effect="timer" data-loading-color="lightBlue">
-                                            <i class="material-icons">loop</i>
-                                        </a>
-                                    </li>
-                                    <li class="dropdown">
-                                        <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                            <i class="material-icons">more_vert</i>
-                                        </a>
-                                        <ul class="dropdown-menu pull-right">
-                                            <li><a href="javascript:void(0);">Action</a></li>
-                                            <li><a href="javascript:void(0);">Another action</a></li>
-                                            <li><a href="javascript:void(0);">Something else here</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="body fb_posts">
-                                <div class="fb-post" data-href="https://www.facebook.com/BBDsoftwaredevelopment/posts/10155981717277439:0" data-witdth="auto" data-show-text="true"><blockquote cite="https://www.facebook.com/BBDsoftwaredevelopment/posts/10155981717277439:0" class="fb-xfbml-parse-ignore"><p>BBD&#x2019;s Cloud Masters Challenge kicks off today. An internal staff hackathon &#x2013; winners will take home the title of 2017 Cloud Masters through problem-solving ideas to revolutionise the Cloud space!</p>Posted by <a href="https://www.facebook.com/BBDsoftwaredevelopment/">BBD</a> on&nbsp;<a href="https://www.facebook.com/BBDsoftwaredevelopment/posts/10155981717277439:0">Friday, August 11, 2017</a></blockquote></div>
+                <!-- Links to bbd site -->
+                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                    <div class="card">
+                        <div class="header bg-light-blue">
+                            <h2>
+                                BBD Bulletin
+                            </h2>
+                        </div>
+                        <div class="body">
+                            <a href="http://www.bbd.co.za/bulletin" target="_blank">
+                                <i class="large material-icons">play_circle_outline</i>
+                                <span>Read the bulletin</span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="header bg-light-green">
+                            <h2>
+                                BBD News
+                            </h2>
+                        </div>
+                        <div class="body">
+                            <a href="http://www.bbd.co.za/bulletin" target="_blank">
+                                <i class="large material-icons">play_circle_outline</i>
+                                <span>Get the latest</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- #END# Links to bbd site -->
+            </div>
+
+            <div class="row clearfix">
+                <!-- Twitter Feed -->
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                    <div class="card">
+                        <div class="header bg-light-blue">
+                            <h2>
+                                BBD Feed <small>Twitter</small>
+                            </h2>
+                            <ul class="header-dropdown m-r--5">
+                                <li>
+                                    <a href="javascript:void(0);" data-toggle="cardloading" data-loading-effect="timer" data-loading-color="lightBlue">
+                                        <i class="material-icons">loop</i>
+                                    </a>
+                                </li>
+                                <li class="dropdown">
+                                    <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                        <i class="material-icons">more_vert</i>
+                                    </a>
+                                    <ul class="dropdown-menu pull-right">
+                                        <li><a href="javascript:void(0);">TF!</a></li>
+                                        <li><a href="javascript:void(0);">You really opened this?</a></li>
+                                        <li><a href="javascript:void(0);">You are something else</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="body">
+                            <a class="twitter-timeline" 
+                               data-height="500" href="https://twitter.com/bbdsoftware">Tweets by bbdsoftware</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Facebook Feed -->
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                    <div class="card">
+                        <div class="header bg-light-blue">
+                            <h2>
+                                BBD Feed <small>Facebook</small>
+                            </h2>
+                            <ul class="header-dropdown m-r--5">
+                                <li>
+                                    <a href="javascript:void(0);" data-toggle="cardloading" data-loading-effect="timer" data-loading-color="lightBlue">
+                                        <i class="material-icons">loop</i>
+                                    </a>
+                                </li>
+                                <li class="dropdown">
+                                    <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                        <i class="material-icons">more_vert</i>
+                                    </a>
+                                    <ul class="dropdown-menu pull-right">
+                                        <li><a href="javascript:void(0);">What you expect</a></li>
+                                        <li><a href="javascript:void(0);">huh?</a></li>
+                                        <li><a href="javascript:void(0);">This is a DEMO!</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="body">
+                            <!--<blockquote class="twitter-tweet" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr"><a href="https://twitter.com/bbdsoftware">bbdsoftware</a> Cloud Masters Challenge kicks off today as staff develop problem-solving ideas to revolutionise the <a href="https://twitter.com/hashtag/Cloud?src=hash">#Cloud</a>! <a href="https://t.co/Plc184YLLk">pic.twitter.com/Plc184YLLk</a></p>&mdash; BBD (bbdsoftware) <a href="https://twitter.com/bbdsoftware/status/895919547039055872">August 11, 2017</a></blockquote>-->
+                            <!--<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>-->
+                            <div class="fb-page"
+                                 data-href="https://www.facebook.com/BBDsoftwaredevelopment/"
+                                 data-tabs="timeline"
+                                 data-small-header="false"
+                                 data-adapt-container-width="true"
+                                 data-hide-cover="false"
+                                 data-show-facepile="true">
+                                <blockquote cite="https://www.facebook.com/BBDsoftwaredevelopment/" class="fb-xfbml-parse-ignore">
+                                    <a href="https://www.facebook.com/BBDsoftwaredevelopment/">BBD</a>
+                                </blockquote>
                             </div>
                         </div>
                     </div>
