--- a/BBDBank/Views/Home/DoChallenge.cshtml
+++ b/BBDBank/Views/Home/DoChallenge.cshtml
@@ -94,7 +94,7 @@
                 </div>
                 <div class="info-container">
                     <div class="name" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cebo M</div>
-                    <div class="email">cebo@bbd.co.za</div>
+                    <div class="name">Coins <span class="label bg-blue">9001</span></div>
                     <div class="btn-group user-helper-dropdown">
                         <i class="material-icons" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">keyboard_arrow_down</i>
                         <ul class="dropdown-menu pull-right">
@@ -117,18 +117,17 @@
                         </a>
                     </li>
                     <li>
-                        <a href="pages/typography.html">
+                        <a href="#">
                             <i class="material-icons">settings</i>
                             <span>Admin</span>
                         </a>
                     </li>
                     <li>
-                        <a href="pages/helper-classes.html">
+                        <a href="#">
                             <i class="material-icons">shopping_cart</i>
                             <span>BBD Store</span>
                         </a>
                     </li>
-                    <li role="seperator" class="divider"></li>
                     <li>
                         <a href="javascript:void(0);" class="menu-toggle">
                             <i class="material-icons">code</i>
@@ -136,12 +135,12 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/CreateChallenge" class="">
                                     <span>Add Challenge</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/ChallengeList" class="">
                                     <span>Complete Challenge</span>
                                 </a>
                             </li>
@@ -154,12 +153,12 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/CreateChallenge" class="">
                                     <span>Add Challenge</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/ChallengeList" class="">
                                     <span>Complete Challenge</span>
                                 </a>
                             </li>
@@ -172,12 +171,12 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/CreateChallenge" class="">
                                     <span>Add Challenge</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/ChallengeList" class="">
                                     <span>Complete Challenge</span>
                                 </a>
                             </li>
@@ -190,12 +189,12 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/CreateChallenge" class="">
                                     <span>Add Challenge</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/ChallengeList" class="">
                                     <span>Complete Challenge</span>
                                 </a>
                             </li>
@@ -208,12 +207,12 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/CreateChallenge" class="">
                                     <span>Add Challenge</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/ChallengeList" class="">
                                     <span>Complete Challenge</span>
                                 </a>
                             </li>
@@ -226,12 +225,12 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/CreateChallenge" class="">
                                     <span>Add Challenge</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/ChallengeList" class="">
                                     <span>Complete Challenge</span>
                                 </a>
                             </li>
@@ -244,12 +243,12 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/CreateChallenge" class="">
                                     <span>Add Challenge</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/ChallengeList" class="">
                                     <span>Complete Challenge</span>
                                 </a>
                             </li>
@@ -262,12 +261,12 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/CreateChallenge" class="">
                                     <span>Add Challenge</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="javascript:void(0);" class="">
+                                <a href="/Home/ChallengeList" class="">
                                     <span>Complete Challenge</span>
                                 </a>
                             </li>
@@ -282,7 +281,7 @@
                     &copy; 2017 <a href="javascript:void(0);">BBDBank</a>.
                 </div>
                 <div class="version">
-                    <b>Version: </b> 1.0.0
+                    <b>Version: </b> 0.0.2
                 </div>
             </div>
             <!-- #Footer -->
@@ -308,9 +307,9 @@
                                         <i class="material-icons">more_vert</i>
                                     </a>
                                     <ul class="dropdown-menu pull-right">
-                                        <li><a href="javascript:void(0);">Action</a></li>
-                                        <li><a href="javascript:void(0);">Another action</a></li>
-                                        <li><a href="javascript:void(0);">Something else here</a></li>
+                                        <li><a href="javascript:void(0);">Trying that ish again?</a></li>
+                                        <li><a href="javascript:void(0);">Trolling FTW </a></li>
+                                        <li><a href="javascript:void(0);">bwahahahaha</a></li>
                                     </ul>
                                 </li>
                             </ul>
