--- a/BBDBank/Views/Shared/_Layout.cshtml
+++ b/BBDBank/Views/Shared/_Layout.cshtml
@@ -97,6 +97,7 @@
     <script src="~/js/pages/forms/form-wizard.js"></script>
     <script src="~/js/pages/forms/advanced-form-elements.js"></script>
     <script src="~/js/pages/index.js"></script>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
     <!-- Demo Js -->
     <script src="~/js/demo.js"></script>
