--- a/BBDBank/wwwroot/css/style.css
+++ b/BBDBank/wwwroot/css/style.css
@@ -8041,6 +8041,8 @@ html.ie11 .bs-searchbox .form-control {
   width: 90%; }
 
 .fb_posts {
-    max-width: 100%;
-    overflow: auto;
+    /*max-width: 100%;*/
+    /*overflow: auto;*/
+    overflow-y: auto;
+    overflow-x : auto;
 }
